--- a/public/css/personality.css
+++ b/public/css/personality.css
@@ -12,7 +12,7 @@
 }
 
 .form-group {
-	margin-top: 100px;
+	margin-top: 150px;
 }
 
 /******************************/
